# nnx_benchmark

./: .pre-commit-config.yaml  README.md  mkdocs.yaml  pyproject.toml  readthedocs.yaml
.github/workflows/: python-package.yaml
src/nnx_benchmark/models/ViT/: benchmark.py  model.py  train.py
src/pythonpackagetemplate/: hello.py
tests/: test_this.py
